# ZiSE25_Mutation_Testing

./: .gitignore  .swp  CMakeLists.txt  Kconfig  README.md  build.sh  clean.sh  prepare.sh  setup.sh  temp_alert.sdoc  west-commands.yml  west.yml
.github/workflows/: ECLAIR_coding_guidelines_compliance.yml  ECLAIR_normal.yml  ECLAIR_pull_request.yml  ECLAIR_requirements_coverage.yml  twister_tests.yml
ECLAIR/: .gitignore  action.settings  action_check_clean_regressions.sh  action_push.sh  analysis_MC.ecl  analysis_REQMAN.ecl  analysis_gcov.ecl  analyze.sh  architecture.ecl  barr-stylistic.ecl  deviations.ecl  good_items  good_words  report.ecl  requirements.ecl  tagging.ecl  toolchain.ecl  vocabulary-config.ecl
ECLAIR/traps/: gcovr
boards/: stm32f746g_disco.overlay
inc/: buzzer.h  display.h  leds.h  tm1637.h  utils.h
scripts/: analyze_coverage_cmd.py  analyze_requirements_cmd.py  build_reqman_configuration.py  check_requirements.py  eclair_format_all_sources.sh  read_sdoc.py
src/: buzzer.c  display.c  leds.c  main.c  tm1637.c
temp_alert/: prj.conf
temp_alert/boards/: frdm_mcxn947_mcxn947_cpu0.overlay
temp_alert/inc/: buzzer.h  leds.h  tm1637.h
temp_alert/src/: main.c
tests/Mutationtest/: Readme.txt  buzzer_mutation_out.txt  display_mutation_out.txt  leds_mutation_out.txt  mull.yml
tests/test_temp_alert/: CMakeLists.txt  prj.conf  test_buzzer.c  test_display.c  test_leds.c  testcase.yaml
tests/test_temp_alert/boards/: native_sim.overlay
